--- a/index.html
+++ b/index.html
@@ -241,16 +241,16 @@
         </section> -->
         <footer class=" bg-primary-pink w-100 ">
             <div class="container">
-                <div class="row align-items-start  justify-content-between w-100 pt-5 pb-3">
+                <div class="row align-items-center justify-content-center  pt-5 pb-3 gap-5">
                     <!-- <div class="container  bg-secondary w-100"> -->
-                    <div class="col-3 text-light ">
+                    <div class="col-lg-3 text-light ">
                         <h4>Localização</h4>
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3978.8530313124734!2d-43.0223365253487!3d-4.248842446040408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78da5a7910c8dbf%3A0x49db4cc8becd2e5f!2sConfeitaria%20das%20Amigas!5e0!3m2!1spt-BR!2sbr!4v1696517368872!5m2!1spt-BR!2sbr"
                             width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                    <div class="col-3 text-light d-flex flex-column">
+                    <div class="col-lg-3 text-light d-flex flex-column">
                         <h4>Canais de atendimento</h4>
                         <ul class="ul list-group">
                             <li class="fs-5 ">
@@ -263,7 +263,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-3 text-light ">
+                    <div class="col-lg-3 text-light pb-4 ">
                         <h3>Redes Sociais</h3>
                         <ul class="ul list-group flex-row gap-3 ">
                             <li class="fs-3 ">
